Fix The Auth Bug and Enable Real authentication process/ STILL CONTAIN BGS
